Add containers and other elements to portfolio.

--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@ body
 }
 .rectangle
 {
-	width:960px;
-	margin:20px;
+	width:980px;
+	margin:10px;
+	text-align: center;
 }
 .square
 {
@@ -25,14 +26,17 @@ body
 {
 	float:left;
 	font-family: 'Josefin Sans', sans-serif;
-	font-size: 70px;
+	font-size: 50px;
 	width:600px;
+	text-align: left;
+
 }
 #zegar
 {
 	float:left;
 	font-family: 'Josefin Sans', sans-serif;
-	font-size: 70px;
+	font-size: 50px;
+	text-align: left;
 
 }
 
@@ -42,7 +46,7 @@ body
 	width:230px;
 	height:142px;
 	background-color: #3095d3;
-	float: left;
+	float:left;
 }
 .tile2
 {
@@ -50,7 +54,7 @@ body
 	width:230px;
 	height:142px;
 	background-color: #666666;
-	float: left;
+	float:left;
 }
 .tile3
 {
@@ -58,7 +62,7 @@ body
 	width:230px;
 	height:142px;
 	background-color: #7FFF00;
-	float: left;
+	float:left;
 }
 .tile4
 {
@@ -66,6 +70,50 @@ body
 	width:480px;
 	height:142px;
 	background-color: #DC143C;
+
+}
+.tile5
+{	
+	margin:10px;
+	width:480px;
+	height:304px;
+	background-color: #ffff00	;
+
+}
+.yt
+{	
+	margin:10px;
+	width:105px;
+	height:142px;
+	background-color: #ff0000	;
+	float:left;
+
+}
+.fb
+{	
+	margin:10px;
+	width:105px;
+	height:142px;
+	background-color: #3b5998	;
+	float:left;
+
+}
+.gplus
+{	
+	margin:10px;
+	width:105px;
+	height:142px;
+	background-color: #d34836	;
+	float:left;
+
+}
+.tw
+{	
+	margin:10px;
+	width:105px;
+	height:142px;
+	background-color: #00acee	;
+	float:left;
 
 }
 
