--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body
 	height:142px;
 	background-color: #3095d3;
 	float:left;
+	text-align: center;
 }
 .tile2
 {
@@ -55,6 +56,7 @@ body
 	height:142px;
 	background-color: #666666;
 	float:left;
+	text-align: center;
 }
 .tile3
 {
@@ -63,13 +65,19 @@ body
 	height:142px;
 	background-color: #7FFF00;
 	float:left;
+	text-align: center;
 }
 .tile4
 {
 	margin:10px;
-	width:480px;
-	height:142px;
+	width:420px;
+	height:82px;
 	background-color: #DC143C;
+	text-align: center;
+	font-size: 20px;
+	padding: 30px;
+	line-height: 150%;
+
 
 }
 .tile5
@@ -78,6 +86,7 @@ body
 	width:480px;
 	height:304px;
 	background-color: #ffff00	;
+	text-align: center;
 
 }
 .yt
