Add hrefs and links.

--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -1,5 +1,6 @@
 
 .icon-user:before { content: '\e800'; } /* '' */
+.icon-mail:before { content: '\e801'; } /* '' */
 .icon-gplus-squared:before { content: '\f0d4'; } /* '' */
 .icon-mail-alt:before { content: '\f0e0'; } /* '' */
 .icon-laptop:before { content: '\f109'; } /* '' */
